[gd_scene load_steps=5 format=3 uid="uid://dcxgtelwspw2b"]

[ext_resource type="Script" path="res://scene/factory_hud/recipe.gd" id="1_q845y"]
[ext_resource type="Texture2D" uid="uid://n5ekmmy5e3pt" path="res://assets/icons/dot.png" id="2_7mr8r"]
[ext_resource type="FontFile" uid="uid://cialo7t5a5hue" path="res://assets/fonts/Minecraft.ttf" id="2_jq5b4"]
[ext_resource type="PackedScene" uid="uid://bx7tfsmhqcl2d" path="res://scene/make_button/make_button.tscn" id="5_3x1uf"]

[node name="Recipe" type="HBoxContainer"]
size_flags_vertical = 0
script = ExtResource("1_q845y")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_7mr8r")
stretch_mode = 2

[node name="ReciepeDesc" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/normal_font = ExtResource("2_jq5b4")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "sdasdsdadadsdsad"

[node name="MakeButton" parent="." instance=ExtResource("5_3x1uf")]
layout_mode = 2
type = 0

[connection signal="pressed" from="MakeButton" to="." method="_on_make_button_pressed"]
